--- a/app/template/content/home/latest-news.html
+++ b/app/template/content/home/latest-news.html
@@ -1,51 +1,81 @@
+<div class="tt-heading tt-heading-lg padding-on text-center">
+    <div class="tt-heading-inner tt-wrap">
+        <h1 class="tt-heading-title">Latest From Blog</h1>
+        <div class="tt-heading-subtitle">News, Reviews, Tips &amp; Tricks</div>
+        <hr class="hr-short">
+    </div>
+</div>
 
-<section id="latest-news-section">
+<div class="latest-news-section-inner tt-wrap">
+    <div class="latest-news-carousel">
+        <div class="owl-carousel cursor-grab nav-outside-top" data-items="3" data-margin="30" data-loop="true"
+            data-dots="false" data-nav="true" data-nav-speed="500" data-autoplay="true" data-autoplay-timeout="5000"
+            data-autoplay-speed="500" data-autoplay-hover-pause="true" data-tablet-landscape="3"
+            data-tablet-portrait="2" data-mobile-landscape="1" data-mobile-portrait="1">
 
-    <div class="tt-heading tt-heading-lg padding-on text-center">
-        <div class="tt-heading-inner tt-wrap">
-            <h1 class="tt-heading-title">Latest From Blog</h1>
-            <div class="tt-heading-subtitle">News, Reviews, Tips &amp; Tricks</div>
-            <hr class="hr-short">
+            {% for news in news_list %}
+            <div class="cc-item">
+                <article class="blog-list-item">
+                    <a href="blog-single.html" class="bl-item-image"
+                        style="display: block; height: 30vh; overflow: hidden;">
+                        <img src="{{ news.image.url }}" alt="image"
+                            style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
+                    </a>
+                    <div style="height:30vh;" class="bl-item-info">
+                        <div class="bl-item-category"><a href="blog-archive.html">{{ news.category }}</a></div>
+                        <a href="blog-single.html" class="bl-item-title line-clamp-1">
+                            <h2>{{ news.title }}</h2>
+                        </a>
+                        <div class="bl-item-meta">
+                            <span class="published">{{ news.created_at }}</span>
+                        </div>
+                        <div class="bl-item-desc line-clamp-3">
+                            Etiam sollicitudin dolor lorem, non aliquet quam dignissim vel. Nunc at eros non odio
+                            vestibulum porttitor egestas ut nisl. Proin in cursus nisi, id feugiat magna. Aliquam nec
+                            elit a lorem egestas vehicula vel eu erat. Pellentesque a lacus sed risus cursus
+                            venenatis
+                        </div>
+                        <div class="bl-item-desc" data-max-words="14"></div>
+                        <a href="blog-single.html" class="bl-item-read-more" title="Read More"><span></span></a>
+                        <ul class="bl-item-attr">
+                            <li>
+                                <a href="blog-single.html#blog-post-comments" class="bl-item-comments-count"
+                                    title="Read the comments"><i class="far fa-comment"></i> 10</a>
+                            </li>
+                            <li>
+                                <div class="favorite-btn active">
+                                    <div class="fav-inner">
+                                        <div class="icon-heart">
+                                            <span class="icon-heart-empty"></span>
+                                            <span class="icon-heart-filled"></span>
+                                        </div>
+                                    </div>
+                                    <div class="fav-count">48</div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+            {% endfor %}
         </div>
     </div>
- 
-    <div class="latest-news-section-inner tt-wrap"> 
-        <div class="latest-news-carousel">
-            <div class="owl-carousel cursor-grab nav-outside-top" data-items="3" data-margin="30" data-loop="true" data-dots="false" data-nav="true" data-nav-speed="500" data-autoplay="true" data-autoplay-timeout="5000" data-autoplay-speed="500" data-autoplay-hover-pause="true" data-tablet-landscape="3" data-tablet-portrait="2" data-mobile-landscape="1" data-mobile-portrait="1">
-                
-                {% for news in news_list %}
-                <div class="cc-item">
-                    <article class="blog-list-item">
-                        <a href="blog-single.html" class="bl-item-image"><img src="{{ news.image.url }}" alt="image"></a>
-                        <div class="bl-item-info">
-                            <div class="bl-item-category"><a href="blog-archive.html">{{ news.category }}</a></div>
-                            <a href="blog-single.html" class="bl-item-title"><h2>{{ news.title }}</h2></a>
-                            <div class="bl-item-meta"> 
-                                <span class="published">{{ news.created_at }}</span>
-                            </div>
-                            <div class="bl-item-desc" data-max-words="14"></div>
-                            <a href="blog-single.html" class="bl-item-read-more" title="Read More"><span></span></a>
-                            <ul class="bl-item-attr">
-                                <li>
-                                    <a href="blog-single.html#blog-post-comments" class="bl-item-comments-count" title="Read the comments"><i class="far fa-comment"></i> 10</a>
-                                </li>
-                                <li>
-                                    <div class="favorite-btn active">
-                                        <div class="fav-inner">
-                                            <div class="icon-heart">
-                                                <span class="icon-heart-empty"></span>
-                                                <span class="icon-heart-filled"></span>
-                                            </div>
-                                        </div>
-                                        <div class="fav-count">48</div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </article>
-                </div>
-                {% endfor %}
-            </div>
-        </div> 
-    </div> 
-</section>
+</div>
+
+
+<style>
+    .line-clamp-3 {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .line-clamp-1 {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+</style>
