--- a/app/template/base.html
+++ b/app/template/base.html
@@ -44,12 +44,12 @@
 </head>
 
 
-<body id="body" class="animsition">
+<body id="body">
 
 
 {% include "comman/header.html"%}
 {% block content %}{% endblock content %}
-{% include "comman/footer.html"%}
+{% comment %} {% include "comman/footer.html"%} {% endcomment %}
 
 
 
