--- a/app/template/content/home/call-to.html
+++ b/app/template/content/home/call-to.html
@@ -4,16 +4,9 @@
     <div class="full-cover for-light-style bg-image" style="background-image: url(assets/img/pattern/bg-pattern-2-light.png); background-position: 50% 50%;"></div>
     <div class="full-cover for-dark-style bg-image" style="background-image: url(assets/img/pattern/bg-pattern-2-dark.png); background-position: 50% 50%;"></div>
 
-    <div class="call-to-action-inner tt-wrap"> <!-- add/remove class "tt-wrap" to enable/disable element boxed layout (class "tt-boxed" is required in <body> tag! ) -->
+    <div class="call-to-action-inner tt-wrap">
         <div class="row">
             <div class="col-md-12 text-center">
-
-                <!-- Begin tt-heading 
-                ====================== 
-                * Use class "padding-on" to enable heading paddings (useful if you use tt-heading as stand alone element).
-                * Use class "text-center" or "text-right" to align tt-heading.
-                * Use classes "tt-heading-xs", "tt-heading-sm", "tt-heading-lg", "tt-heading-xlg" or "tt-heading-xxlg" to set tt-heading size.
-                -->
                 <div class="tt-heading tt-heading-lg text-center">
                     <div class="tt-heading-inner tt-wrap">
                         <h1 class="tt-heading-title">What Next?</h1>
@@ -21,8 +14,6 @@
                         <hr class="hr-short">
                     </div>
                 </div>
-                <!-- End tt-heading -->
-
                 <div class="margin-top-30 max-width-1000 margin-auto">
                     <p>Fusce et velit sed augue rhoncus tempor. Sed ac lacinia augue, nec lacinia felis. Sed sit amet diam leo. Praesent vel malesuada arcu. Donec mattis, arcu vel vehicula feugiat, sem turpis dignissim ex, eu sollicitudin neque.</p>
                     
@@ -32,7 +23,7 @@
                     </div>
                 </div>
 
-            </div> <!-- /.col -->
-        </div> <!-- /.row -->
-    </div> <!-- /.call-to-action-inner -->
+            </div>
+        </div> 
+    </div>
 </section>
