--- a/app/template/content/home/latest-news.html
+++ b/app/template/content/home/latest-news.html
@@ -1,6 +1,6 @@
-<div class="tt-heading tt-heading-lg padding-on text-center">
+<div class="tt-heading tt-heading-lg padding-on text-start">
     <div class="tt-heading-inner tt-wrap">
-        <h1 class="tt-heading-title">Latest From Blog</h1>
+        <h1 class="tt-heading-title">BLOGS</h1>
         <div class="tt-heading-subtitle">News, Reviews, Tips &amp; Tricks</div>
         <hr class="hr-short">
     </div>
@@ -9,7 +9,7 @@
 <div class="latest-news-section-inner tt-wrap">
     <div class="latest-news-carousel">
         <div class="owl-carousel cursor-grab nav-outside-top" data-items="3" data-margin="30" data-loop="true"
-            data-dots="false" data-nav="true" data-nav-speed="500" data-autoplay="true" data-autoplay-timeout="5000"
+            data-dots="false" data-nav="true" data-nav-speed="500" data-autoplay="true" data-autoplay-timeout="2000"
             data-autoplay-speed="500" data-autoplay-hover-pause="true" data-tablet-landscape="3"
             data-tablet-portrait="2" data-mobile-landscape="1" data-mobile-portrait="1">
 
@@ -17,14 +17,14 @@
             <div class="cc-item">
                 <article class="blog-list-item">
                     <a href="blog-single.html" class="bl-item-image"
-                        style="display: block; height: 30vh; overflow: hidden;">
+                        style="display: block; height: 40vh; overflow: hidden;">
                         <img src="{{ news.image.url }}" alt="image"
                             style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
                     </a>
                     <div style="height:30vh;" class="bl-item-info">
                         <div class="bl-item-category"><a href="blog-archive.html">{{ news.category }}</a></div>
                         <a href="blog-single.html" class="bl-item-title line-clamp-1">
-                            <h2>{{ news.title }}</h2>
+                            <h4>{{ news.title }}</h4>
                         </a>
                         <div class="bl-item-meta">
                             <span class="published">{{ news.created_at }}</span>
@@ -36,24 +36,6 @@
                             venenatis
                         </div>
                         <div class="bl-item-desc" data-max-words="14"></div>
-                        <a href="blog-single.html" class="bl-item-read-more" title="Read More"><span></span></a>
-                        <ul class="bl-item-attr">
-                            <li>
-                                <a href="blog-single.html#blog-post-comments" class="bl-item-comments-count"
-                                    title="Read the comments"><i class="far fa-comment"></i> 10</a>
-                            </li>
-                            <li>
-                                <div class="favorite-btn active">
-                                    <div class="fav-inner">
-                                        <div class="icon-heart">
-                                            <span class="icon-heart-empty"></span>
-                                            <span class="icon-heart-filled"></span>
-                                        </div>
-                                    </div>
-                                    <div class="fav-count">48</div>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                 </article>
             </div>
@@ -61,8 +43,6 @@
         </div>
     </div>
 </div>
-
-
 <style>
     .line-clamp-3 {
         display: -webkit-box;
